<resources>
    <string name="app_name">Queremos Ouvir Você!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Queremos Ouvir Você!</string>
    <string name="nav_header_subtitle">Parasolutions Group</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_sair">Sair</string>
    <string name="menu_administrador">Administrador</string>
    <string name="menu_cadastro_cliente">Cadastro Cliente</string>
    <string name="menu_perguntas">Perguntas</string>
    <string name="menu_configuracoes">Configurações</string>
    <string name="menu_compartilhar">Compartilhar</string>
    <string name="menu_sobre">Sobre</string>
    <string name="modelo_fragment">Fragmento Modelo</string>
    <string name="modelo_inicial">Pesquisa de Satisfação</string>
    <string name="modelo_inicialIng">Choose your language!</string>
    <string name="txtCategorias">Selecione as categorias referentes aos produtos consumidos</string>
    <string name="txtCafe">CAFÉ</string>
    <string name="txtBebidas">BEBIDAS</string>
    <string name="txtHappyHour">HAPPYHOUR</string>
    <string name="txtPratos">PRATOS</string>
    <string name="txtBoutique">BOUTIQUE</string>
    <string name="txtDoces">DOCES</string>
    <string name="txtSalgados">SALGADOS</string>
    <string name="txtIniciar">INICIAR</string>
    <string name="txtVoltar">VOLTAR</string>
    <string name="txtIndicacao">Em uma escala de 0 a 10, o quanto você recomendaria nosso estabelecimento a um amigo ou familiar?</string>
    <string name="txtCadastro">Gostaria de se cadastrar para receber notificações sobre nossas promoções?</string>
    <string name="btnSim">Sim</string>
    <string name="btnNao">Não</string>
    <string name="btnCadastrado">Já sou cadastrado</string>
    <string name="txtFinal">OBRIGADO!!!</string>
    <string name="txtFina2">Sua opinião é muito importante!</string>
    <string name="txtHintNome">Nome:</string>
    <string name="txtHintEmail">E-mail:</string>
    <string name="txtHintNascimento">Data de Nascimento:</string>
    <string name="txtHintFone">Celular: (Opcional)</string>
    <string name="txtNotificacao">Gostaria de ser notificado sobre nossas promoções?</string>
    <string name="txtHintMensagem">(Opcional) Deixe sua sugestão, dúvida ou reclamação.</string>
    <string name="btnEnviar">Enviar</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="btnLimpar">Limpar</string>
    <string name="rbNao">Não</string>
    <string name="rbSim">Sim</string>
    <string name="btnLogin">Login</string>
    <string name="editUsusario">Usuário</string>
    <string name="editSenha">Senha</string>
    <string name="btnRelatorios">Relatórios</string>
    <string name="btnConsultar">Consultar</string>
    <string name="btnCadastrar">Cadastrar Gerente</string>
    <string name="btnConsultarDados">Consultar Dados</string>
    <string name="btnSair">Sair</string>
    <string name="txtPeriodo">Período:</string>
    <string name="txtRelatorio">Relatório Geral</string>
    <string name="txtPrazo">Prazo:</string>
    <string name="txtCertezaGeral">Certeza Geral:</string>
    <string name="txtContradicaoGeral">Contradição Geral:</string>
    <string name="txtSituacaoAtual">Situação Atual:</string>
    <string-array name="prazo">
        <item>Geral</item>
        <item>Mensal</item>
        <item>Semanal</item>
    </string-array>
    <string-array name="periodo">
        <item>Integral</item>
        <item>Matutino</item>
        <item>Vespertino</item>
    </string-array>
    <string name="txtCadastroGerente">Cadastro de Gerente</string>
    <string name="editNome">Nome</string>
    <string name="editConfirmarSenha">Confirmar senha</string>
    <string name="btnCadastrar2">Cadastrar</string>
    <string name="txtDadosCliente">Dados Clientes</string>
    <string name="txtNome">Nome:</string>
    <string name="txtEmail">E-Mail:</string>
    <string name="txtNascimento">Nascimento:</string>
    <string name="txtFone">Fone:</string>
    <string name="txtNotificacao2">Notificação:</string>
    <string name="txtTermos"><b>TERMOS E CONDIÇÕES GERAIS DE USO DO APLICATIVO</b>\n\n<b>“Queremos ouvir você!”</b>\n\n</string>
</resources>